# mlb-data-db

./: .env.example  .gitignore  CLAUDE.md  Makefile  app.py  pyproject.toml
.claude/: launch.json
.github/workflows/: backfill.yml  ci.yml  nightly.yml
migrations/: migrate.py
pages/: 1_Standings.py  2_Games.py  3_Head_to_Head.py  4_Teams.py  5_Players.py  6_Leaders.py
scripts/: explore_api.py  populate_game_batting.py
sql/gold/: 001_dim_player.sql  002_dim_team.sql  003_dim_venue.sql  004_fact_game.sql  005_head_to_head.sql  006_leaderboards.sql  007_player_season_summary.sql  008_standings_snap.sql  009_league_averages.sql
sql/schema/: 001_initial_schema.sql  002_standings_snap_pk.sql  003_add_pitcher_decisions.sql  004_game_batting.sql  005_game_pitching.sql
sql/silver/: 001_seed_seasons.sql  002_leagues.sql  003_divisions.sql  004_venues.sql  005_teams.sql  006_players.sql  007_games.sql  008_game_linescore.sql  009_game_boxscore.sql  010_fact_stubs.sql
src/aggregator/: aggregate.py
src/distribution/: sync.py
src/extractor/: backfill.py  client.py  extract.py  writer.py
src/extractor/models/: game_feed.py  team.py
src/monitoring/: health.py  sla.py
src/run_tracker/: tracker.py
src/scheduler/: jobs.py
src/transformer/: game_batting.py  game_pitching.py  transform.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_bench_gold_queries.py
tests/integration/: test_aggregate.py  test_data_accuracy.py  test_distribution.py  test_jobs.py  test_monitoring.py  test_run_tracker.py  test_schema.py  test_transform.py
tests/unit/: test_models.py  test_writer.py
